[package]
name = "arrow-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "arrow_hash"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "44.0.0", features = ["pyarrow", "pyo3"] }
hashbrown = "0.14.0"
pyo3 = "0.19.0"
